--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
+* {
+  margin: 0px;
+  padding: 0px;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(209, 217, 221);
 }
 
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.banName {
+  background-color: black;
+  padding: 10px;
+  text-align: center;
+  color: rgba(255, 0, 0, 0.705);
+  font-family: 'Martel Sans', sans-serif;
+  
+}
+.boxx {
+  display: inline-block;
+margin-left: 50px;
+padding: 0px; 
+
+}
+.box {
+  border-radius: 10px;
+  margin: 100px 50px;
+  background-color: aliceblue;
+  width: 250px;
+  box-shadow: 10px 10px 30px black;
+  transition: 0.5s;
+  overflow: hidden;
+}
+.box:hover {
+  transform: scale(1.1);
+}
+.boxImg {
+  width: 100%;
+}
+.boxImg img {
+  width: 100%;
+  height: 100%;
+}
+.temp {
+  padding: 5px 30px;
+  font-size: 10px;
+  color: slategrey;
+  opacity: 0.8;
+}
+.srizName {
+  padding-left: 30px;
+  font-size: 20px;
+}
+.mybtn {
+  margin: 10px 30px;
+  padding: 5px;
+  font-size: 10px;
+  cursor: pointer;
 }
